# game

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.h  GameEntity.cpp  GameEntity.h  Player.cpp  Player.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  game.cpp  game.sln  game.vcxproj  game.vcxproj.filters  main.cpp  run.bat
Debug/: game.exe.recipe  game.ilk  vc142.idb
Debug/game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
game.dir/Debug/: game.exe.recipe  game.ilk
game.dir/Debug/game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
